welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: type mismatch;
 found   : Int(1)
 required: String
    setCouleurBrosse(T(me)+1)
                           ^